# luatorch

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md
.claude/: settings.local.json
.github/workflows/: test.yml
csrc/: tensor.c  tensor.h
csrc/cuda/: memory_pool.cu  memory_pool.h  tensor.cu
csrc/cuda/ops/: activation.cu  arithmetic.cu  cast.cu  flash_attention.cu  fused.cu  loss.cu  matmul.cu
csrc/distributed/: nccl_wrapper.cu  nccl_wrapper.h
csrc/ops/: activation.c  arithmetic.c  conv2d.c  loss.c  matmul.c
examples/: benchmark_pytorch.lua  benchmark_vs_pytorch.md  cifar.lua  gpt.lua  mnist.lua  xor.lua
lua/luatorch/: autograd.lua  compat.lua  init.lua  tensor.lua
lua/luatorch/cuda/: amp.lua
lua/luatorch/data/: dataloader.lua  dataset.lua  tokenizer.lua
lua/luatorch/distributed/: ddp.lua  init.lua  nccl.lua
lua/luatorch/export/: onnx.lua
lua/luatorch/io/: checkpoint.lua
lua/luatorch/models/: gpt.lua  mlp.lua
lua/luatorch/nn/: activation.lua  batchnorm.lua  conv2d.lua  dropout.lua  embedding.lua  flash_attention.lua  init.lua  layernorm.lua  linear.lua  loss.lua  multihead.lua  positional.lua  sequential.lua  transformer.lua
lua/luatorch/optim/: adam.lua  adamw.lua  scheduler.lua  sgd.lua
lua/luatorch/utils/: config.lua  logger.lua
test/: run_all.lua  test_arithmetic.lua  test_autograd.lua  test_cuda.lua  test_matmul.lua  test_nn.lua  test_optim.lua  test_tensor.lua  test_training.lua
tools/: benchmark.lua  install.sh
